# cex-arb-scanner

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  Makefile  README.md  compose.dev.yml  compose.prod.yml
backend/: .rustfmt.toml  Cargo.toml  Dockerfile
backend/src/: lib.rs  main.rs
backend/src/kernel/: mod.rs
backend/src/kernel/dto/: mod.rs  order_book.rs  server.rs  signal.rs
backend/src/kernel/enums/: decoder.rs  exchange.rs  mod.rs
backend/src/kernel/utils/: time.rs
backend/src/modules/: mod.rs
backend/src/modules/arbitrage/: mod.rs  order_book.rs  utils.rs
backend/src/modules/broker/: order_book.rs  signal.rs
backend/src/modules/bus/: mod.rs  order_book.rs  signal.rs
backend/src/modules/decoder/: mod.rs  order_book.rs  utils.rs
backend/src/modules/decoder/binance/: order_book.rs
backend/src/modules/decoder/bitget/: order_book.rs
backend/src/modules/decoder/bybit/: order_book.rs
backend/src/modules/decoder/gate/: order_book.rs
backend/src/modules/decoder/htx/: order_book.rs
backend/src/modules/decoder/mexc/: order_book.rs
backend/src/modules/decoder/okx/: order_book.rs
backend/src/modules/stream/: base_order_book.rs  manager.rs  mod.rs  order_book.rs  supported_pair.rs
backend/src/modules/stream/binance/: order_book.rs
backend/src/modules/stream/bitget/: order_book.rs
backend/src/modules/stream/bybit/: order_book.rs
backend/src/server/: mod.rs  router.rs
backend/src/server/handlers/: mod.rs  sse_signal.rs
backend/src/services/: mod.rs  server.rs  signal.rs  stream.rs
frontend/: Dockerfile  (+4 more)
(+14 files in other folders)
