[package]
name = "arbitrage-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1.89"
futures = "0.3.31"
tungstenite = "0.27.0"
rust_decimal = "1.38.0"
strum = "0.27.2"
strum_macros = "0.27.2"
axum = "0.8.4"
futures-util = "0.3.31"
flate2 = "1.1.2"
